# EIC-Consensus-Kit

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: eic.yml
docs/: agnt_integration.md  design_analysis.md
examples/: ledger_records.json  rejected_record.json  valid_distributed_record.json
schema/: eic_record.schema.json
src/eic_consensus_kit/: __init__.py  cli.py  crypto.py  models.py  profiles.py  proofs.py  scoring.py  workflows.py
tests/: test_scoring.py
