[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "eic-consensus-kit"
version = "0.1.0"
description = "Proof-preserved consensus and dynamic weighting validator for distributed agent ledgers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "James Paul Jackson" }]
keywords = ["agents", "consensus", "ledger", "merkle", "governance", "validation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Distributed Computing",
]
dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=42.0"]
dev = ["cryptography>=42.0", "jsonschema>=4.22", "pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/jacksonjp0311-gif/eic-consensus-kit"
Repository = "https://github.com/jacksonjp0311-gif/eic-consensus-kit"
Issues = "https://github.com/jacksonjp0311-gif/eic-consensus-kit/issues"

[project.scripts]
eicg = "eic_consensus_kit.cli:main"
eic-consensus = "eic_consensus_kit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
